# tamagotchi

./: .gitignore  CMakeLists.txt  LICENSE  README  main.cpp  platformio.ini
diagrams/: class_diagram.puml  usecase_diagram.puml
include/: buttons.hpp  display.hpp  entity.hpp  game.hpp  input.hpp  keyboard.hpp  object.hpp  pet.hpp
src/: buttons.cpp  display.cpp  game.cpp  keyboard.cpp  object.cpp  pet.cpp
